--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
 host.url=http://localhost:8080/
+
+jwt.secret=very-secret-key-for-sortinparcels-app-should-be-long
+jwt.expirationMs=1200000
+server.port=8080
